[fix] sidebar overflow

--- a/searx/static/default/less/style.less
+++ b/searx/static/default/less/style.less
@@ -412,7 +412,7 @@ tr {
 #suggestions, #answers {
 
     	margin-top: 20px;
-		max-width: 54em;
+		max-width: 45em;
 
 }
 
